[package]
name = "rusty-hub"
version = "0.1.0"
authors = ["Gonçalo Valério <gon@ovalerio.net>"]

[dependencies]
actix = "0.8.3"
actix-web = "1.0.2"
r2d2 = "0.8.5"
diesel = { version = "1.4.2", features = ["sqlite", "r2d2"] }
toml = "0.5.0"
clap = "2.32.0"
askama = "0.8"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
url = "1.7.2"
